--- a/blockchain.ipynb
+++ b/blockchain.ipynb
@@ -226,6 +226,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def to_dict(self, include_signature=True):\n",
+    "    d={\n",
+    "        \"inputs\" : list(map(TransactionInput.to_dict, self.inputs)),\n",
+    "        \"outputs\" :  list(map(TransactionOutput.to_dict, self.outputs)), \n",
+    "        \"fee\"    :  self.fee\n",
+    "    }\n",
+    "    if include_signature:\n",
+    "        d[\"signature\"] = self.signature\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_dict(self, include_signature=True):\n",
+    "    d={\n",
+    "        \"inputs\" : list(map(TransactionInput.to_dict, self.inputs)),\n",
+    "        \"outputs\" :  list(map(TransactionOutput.to_dict, self.outputs)),  # Fixed typo: \"outpts\" -> \"outputs\"\n",
+    "        \"fee\"    :  self.fee\n",
+    "    }\n",
+    "    if include_signature:\n",
+    "        d[\"signature\"] = self.signature\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class GenesisTransaction(Transaction):\n",
     "    def __init__(self, recipient_address, amount=25):\n",
     "        self.inputs = []\n",
